[package]
name = "ytbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
dotenv = "0.15.0"
log = { version = "0.4.20", features = ["std", "serde"] }
pretty_env_logger = "0.5.0"
rusty_ytdl = "0.6.5"
teloxide = { version = "0.12.2", features = ["rustls", "full"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "full"] }
